Modernize code (according to Modernizer)